--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -100,9 +100,9 @@ In a pilot study (N=8), writers found questions and rhetorical moves to be usefu
   </main>
 
   <!-- Image Modal -->
-  <div id="imageModal" class="fixed inset-0 bg-black bg-opacity-75 z-50 hidden flex items-center justify-center p-4" onclick="closeImageModal()">
-    <div class="relative max-w-4xl max-h-full">
-      <img id="modalImage" src="" alt="" class="max-w-full max-h-full object-contain rounded-lg">
+  <div id="imageModal" class="fixed inset-0 bg-black bg-opacity-75 z-50 hidden flex items-center justify-center p-0 w-full h-full overflow-auto" onclick="closeImageModal()">
+    <div class="relative w-full h-full flex items-center justify-center">
+      <img id="modalImage" src="" alt="" class="object-contain rounded-lg max-w-[95vw] max-h-[90vh] w-auto h-auto mx-auto my-auto">
       <button 
         onclick="closeImageModal()" 
         class="absolute top-4 right-4 text-white bg-black bg-opacity-50 rounded-full w-8 h-8 flex items-center justify-center hover:bg-opacity-75 transition-all"
